Fix footer position on mobile display

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -11,7 +11,7 @@
 footer{
     background-color: #fff !important;
       position: absolute;
-      top: 100rem;
+      top: 130rem;
       width: 100vw;
   }
 
